Modernise build